2000-06-23  Sam Steingold  <sds@gnu.org>

	* type.lisp (canonicalize-type, subtypep-integer):
	use (ash 1 *) instead of (expt 2 *)

2000-06-22  Sam Steingold  <sds@gnu.org>

	* stream.d (stream_element_type_eq): new function
	(built_in_stream_element_type): use it
	* constsym.d, subr.d: mention `stream_element_type_eq'

2000-06-21  Bruno Haible  <haible@clisp.cons.org>

        * stream.d (built_in_stream_element_type): Fix the last patch.

2000-06-21  Sam Steingold  <sds@gnu.org>

	* stream.d (socket_status): minor tweaks
	(built_in_stream_element_type): fixed the last patch

2000-06-21  Sam Steingold  <sds@gnu.org>

	* stream.d (built_in_stream_element_type): Special case for
	two-way and echo streams.

2000-06-16  Thomas Klausner  <wiz@danbala.ifoer.tuwien.ac.at>
            Bruno Haible  <haible@clisp.cons.org>

        * lispbibl.d (unix): Define on NetBSD.
        * modules/clx/new-clx/e2d.c: Treat __MACH__, __NetBSD__, __BeOS__ as
          Unix.
        * makemake.in (fsstnd): New variant netbsd.
          (install, installdirs, uninstall): For fsstnd=netbsd, install the
          html files in $(lispdocdir), not $(htmldir), and the extra
          documentation in $(lispdocdir), not $(lispdocdir)/doc.

2000-06-12  Bruno Haible  <haible@clisp.cons.org>

        * makemake.in (LIBGCC): Set to empty on BeOS.
          (interpreted.mem, lispinit.mem, lispinit2.mem): On BeOS, copy the
          executable before running it (workaround BeOS kernel bug).

        * unix.d (sock_read, sock_write, closesocket): Don't #define on BeOS.
        * unixaux.d (sock_read, sock_write): New functions.
        * stream.d (low_listen_unbuffered_handle): On BeOS, don't use select
          on file handles. Use O_NONBLOCK as a preferred alternative to
          O_NDELAY.
          (rd_ch_keyboard): On BeOS, don't use select on file handles.
          (low_close_socket, low_read_unbuffered_socket,
           low_listen_unbuffered_socket, low_clear_input_unbuffered_socket,