@@ -1,3 +1,8 @@
+2000-07-19  Sam Steingold  <sds@gnu.org>
+
+	* socket.d (create_server_socket): use "0.0.0.0" instead of the
+	current host to allow anyone to connect to the our server
+
 2000-06-23  Sam Steingold  <sds@gnu.org>
 
 	* type.lisp (canonicalize-type, subtypep-integer):
@@ -11,7 +16,7 @@
 
 2000-06-21  Bruno Haible  <haible@clisp.cons.org>
 
-        * stream.d (built_in_stream_element_type): Fix the last patch.
+	* stream.d (built_in_stream_element_type): Fix the last patch.
 
 2000-06-21  Sam Steingold  <sds@gnu.org>
 
